--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TellerConnect</string>
+    <string name="connect_bank_account">Connect bank account</string>
 </resources>
