Improve error handling, add fragment example

--- a/example-app/src/main/res/values/strings.xml
+++ b/example-app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">TellerConnect</string>
-    <string name="connect_bank_account">Connect bank account</string>
+    <string name="connect_bank_account_activity">Connect bank account\n(Activity)</string>
+    <string name="connect_bank_account_fragment">Connect bank account\n(Fragment)</string>
 </resources>
